<?xml version="1.0"?>
<package format="2">
  <name>angel_db_manager</name>
  <version>0.1.0</version>
  <description>angel_db_manager package</description>

  <maintainer email="sms0432@gmail.com">Akihiro Kawamura</maintainer>

  <license>BSD</license>


  <author email="sms0432@gmail.com">Minsoo Song</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tms_msg_db</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tms_msg_db</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
